# demotrack

./: .gitignore  CMakeLists.txt  README.md  setup.py
demotrack/: __init__.py  beam_elements.py  opencl.py  particle.py
examples/: demo.py  prepare_lattice.py
examples/cuda/: CMakeLists.txt  cuda_demotrack_local_particles.cu  cuda_demotrack_nonopt.cu  cuda_demotrack_occupancy.cu
src/: beam_elements.h  particle.h  space_charge.h  track.h
